Fix spacing issue around the title

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,8 @@ h2 {
     color: #f1f1f1;
     margin-bottom: 50px;
     font-size: 28px;
+    /* to ensure in line with other story content */
+    margin-left: 0.2em;
 }
 
 .title-span {
